--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -26,6 +26,8 @@ header, #main {
   padding: 0 15px;
 }
 
+a[href] { cursor: pointer; }
+
 h1.page_title {
   color: @gray-dark;
   border-bottom: 2px solid;
@@ -271,8 +273,9 @@ p,h1,h2,h3,h4,h5,h6{a{color: @link-color; }}
 
 
 /* events */
-#eventoccurrences .btn {
-  width: 110px;
+#eventoccurrences {
+  .btn { width: 110px; }
+  .well { overflow: hidden; }
 }
 .paginator {
   margin-bottom: 10px;
