--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -121,9 +121,9 @@
     <script src="{{ STATIC_URL }}tags/course.tag?v=1.1" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}js/course.js?v=1.2"></script>
     <script src="{{ STATIC_URL }}js/simpleCart.js?v=1.1"></script>
-    <script src="{{ STATIC_URL }}tags/store.tag" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}drop/cart.tag" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}tags/cart.tag" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}tags/store.tag?v1.0" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}drop/cart.tag?v1.0" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}tags/cart.tag?v1.0" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}drop/drop.js"></script>
     <script src="{{ STATIC_URL }}js/cart.js"></script>
     <script src="{{ STATIC_URL }}js/init.js"></script>
