--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -124,12 +124,14 @@
     <script src="{{ STATIC_URL }}tags/store.tag?v1.0" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}drop/cart.tag?v1.0" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}tags/cart.tag?v1.0" type="riot/tag"></script>
+    {% compress js %}
     <script src="{{ STATIC_URL }}drop/drop.js"></script>
     <script src="{{ STATIC_URL }}js/cart.js"></script>
     <script src="{{ STATIC_URL }}js/init.js"></script>
-    {% block extrajs %}{% endblock %}
     <script src="{{ STATIC_URL }}js/blog.js"></script>
     <script src="{{ STATIC_URL }}js/favico.js"></script>
+    {% endcompress %}
+    {% block extrajs %}{% endblock %}
     <script>
       new Favico({animation : 'popFade'}).badge({{ pending_evaluations.count }});
     </script>
