--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -116,6 +116,7 @@
       USER_COURSE_IDS = [];
     </script>
     <script src="{{ STATIC_URL }}bower/ur/form.tag" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}bower/ur/modal.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}classes.json?v={% now "ymd_hi" %}"></script>
     <script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
     <script src="{{ STATIC_URL }}tags/course.tag?v=1.1" type="riot/tag"></script>
