--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -115,17 +115,17 @@
       ]
       USER_COURSE_IDS = [];
     </script>
-    <script src="{{ STATIC_URL }}bower/ur/form.tag" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}bower/ur/modal.tag" type="riot/tag"></script>
     <script src="{{ STATIC_URL }}classes.json?v={% now "ymd_hi" %}"></script>
     <script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
-    <script src="{{ STATIC_URL }}tags/course.tag?v=1.1" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}tags/store.tag?v1.0" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}drop/cart.tag?v1.0" type="riot/tag"></script>
-    <script src="{{ STATIC_URL }}tags/cart.tag?v1.0" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}bower/ur/form.tag?v=3" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}bower/ur/modal.tag?v=3" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}tags/course.tag?v=1.3" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}tags/store.tag?v1.3" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}drop/cart.tag?v1.3" type="riot/tag"></script>
+    <script src="{{ STATIC_URL }}tags/cart.tag?v1.3" type="riot/tag"></script>
     {% compress js %}
-    <script src="{{ STATIC_URL }}js/course.js?v=1.2"></script>
-    <script src="{{ STATIC_URL }}js/simpleCart.js?v=1.1"></script>
+    <script src="{{ STATIC_URL }}js/course.js"></script>
+    <script src="{{ STATIC_URL }}js/simpleCart.js"></script>
     <script src="{{ STATIC_URL }}drop/drop.js"></script>
     <script src="{{ STATIC_URL }}js/cart.js"></script>
     <script src="{{ STATIC_URL }}js/init.js"></script>
