--- a/event/templates/event/orientations.html
+++ b/event/templates/event/orientations.html
@@ -13,11 +13,11 @@
   {% else %}
   <div>
     {% if prev_occ %}
-    <a href="/event/orientations/{{ prev_occ.start|date:"Y/m/d" }}">
+    <a href="/event/orientations/{{ prev_occ.start|date:"Y/m/d" }}/">
       &laquo; {{ prev_occ.start|date:"M/d/Y" }}</a>
     {% endif %}
     {% if next_occ %}
-    <a href="/event/orientations/{{ next_occ.start|date:"Y/m/d" }}" class="pull-right">
+    <a href="/event/orientations/{{ next_occ.start|date:"Y/m/d" }}/" class="pull-right">
       {{ next_occ.start|date:"M/d/Y" }} &raquo;</a>
     {% endif %}
     <div style="clear: both"></div>
