--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -280,7 +280,13 @@ p,h1,h2,h3,h4,h5,h6{a{color: @link-color; }}
     text-align: center;
     width: 110px;
   }
-  .well { display: flex; justify-content: space-between; }
+  .flexy { display: flex; flex-wrap: wrap; justify-content: space-around; }
+
+  .text {
+    display: flex;
+    font-size: 1.5em;
+    @media (max-width: @screen-xs-max) { font-size: 1.3em; }
+  }
   .buttons {
     display: flex;
     flex-flow: row wrap;
