compress now works with tag files

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -280,10 +280,9 @@ p,h1,h2,h3,h4,h5,h6{a{color: @link-color; }}
     text-align: center;
     width: 110px;
   }
-  .flexy { display: flex; flex-wrap: wrap; justify-content: space-around; }
+  .well { display: flex; flex-wrap: wrap; justify-content: space-between; }
 
   .text {
-    display: flex;
     font-size: 1.5em;
     @media (max-width: @screen-xs-max) { font-size: 1.3em; }
   }
