--- a/main/templates/beta.html
+++ b/main/templates/beta.html
@@ -3,13 +3,14 @@
 {% block main %}{% endblock %}
 
 {% block extrajs %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
+{% compress js %}
 <script type="riot/tag" src="{{ STATIC_URL }}tags/checkin.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/tool.tag"></script>
-<script type="riot/tag" src="{{ STATIC_URL }}bower/ur/modal.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}bower/ur/markdown.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/poll.tag"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/markdown.js/0.5.0/markdown.min.js"></script>
-<script src="{{ STATIC_URL }}tools.json?v={% now "ymd_h" %}"></script>
+<script src="{{ STATIC_URL }}tools.json"></script>
 <script src="{{ STATIC_URL }}js/router.js"></script>
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
+{% endcompress %}
 {% endblock %}
