restyling tool a bit

--- a/main/static/less/store.less
+++ b/main/static/less/store.less
@@ -76,6 +76,15 @@ product, product-admin {
 }
 
 product.tiny {
+  .name {
+    font-size: 1.2em;
+    font-weight: bold;
+    height: auto;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+  .price { height: auto; }
+  .btn-block { margin-bottom: 0; }
   .bottom { position: static; }
   .img { display: none; }
   .out-of-stock:before { background-size: auto 80%; }
