--- a/store/templates/store/receipts.html
+++ b/store/templates/store/receipts.html
@@ -4,64 +4,36 @@
 {% block title %}Shop Receipts{% endblock %}
 
 {% block main %}
-<div id="receipts" class="col-sm-6">
-  <h1>Outstanding Orders <a class="pull-right fa fa-list" href="/admin/shop/order/"></a></h1>
-  {% for order,items in outstanding_orders|filter_order_by_model:"consumable" %}
-  <div class="well">
-    <form method="POST">
-      <input name="status" value="{{ order.SHIPPED }}" type="hidden">
-      <input name="pk" value="{{ order.pk }}" type="hidden">
-      <button class="btn btn-success pull-right">Mark Delivered</button>
-    </form>
-    <b>Order #{{ order.pk }} - {{ order.user }}<br/> {{ order.created|date:"m/d@P" }}</b>
-    <ul>
-      {% for item in items.all %}
-      <li><b>{{ item.quantity }}x</b> {{ item.product }}</li>
-      {% endfor %}
-      {% for info in order.extra_info.all %}
-      {% if forloop.first %}<br/>{% endif %}
-      <li>{{ info.text }}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  {% empty %}
-  <p class="lead">There are no outstanding orders. Hooray</p>
-  {% endfor %}
-  <h1>Delivered Orders</h1>
-  {% for order in delivered_orders %}
-  <div class="well">
-    <form method="POST">
-      <input name="status" value="{{ order.COMPLETED }}" type="hidden">
-      <input name="pk" value="{{ order.pk }}" type="hidden">
-      <button class="btn btn-success pull-right">Mark Outstanding</button>
-    </form>
-    <b>Order #{{ order.pk }} - {{ order.user }}<br/> {{ order.created|date:"m/d@P" }}</b>
-    <ul>
-      {% for item in items.all %}
-      <li><b>{{ item.quantity }}x</b> {{item.product }}</li>
-      {% endfor %}
-      {% if order.extra_info.all %}<br/>{% endif %}
-      {% for info in order.extra_info.all %}
-      <li>{{ info.text }}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  {% endfor %}
-</div>
-<div id="checkouts" class="col-sm-6">
-  <h1>Course Checkouts</h1>
-  {% for order,items in course_orders|filter_order_by_model:"coursecheckout" %}
-  <div class="well">
-    <b>Order #{{ order.pk }} - {{ order.user }}<br/> {{ order.created|date:"m/d@P" }}</b>
-    <ul>
-      {% for item in items.all %}
-      <li><b>{{ item.quantity }}x</b> {{item.product }}</li>
-      {% endfor %}
-      {% if order.extra_info.all %}<br/>{% endif %}
-      {% for info in order.extra_info.all %}
-      <li>{{ info.text }}</li>
-      {% endfor %}
-    </ul>
+<div id="receipts">
+  {% for title,orders in order_sets %}
+  <div id="receipts" class="col-sm-6">
+    <h1>{{ title }} <a class="pull-right fa fa-list" href="/admin/shop/order/"></a></h1>
+    {% for order,items in orders|filter_order_by_model:"consumable" %}
+    <div class="well">
+      <form method="POST">
+        <input name="pk" value="{{ order.pk }}" type="hidden">
+        {% if order.status == order.COMPLETED %}
+        <input name="status" value="{{ order.SHIPPED }}" type="hidden">
+        <button class="btn btn-success pull-right">Mark Delivered</button>
+        {% else %}
+        <input name="status" value="{{ order.COMPLETED }}" type="hidden">
+        <button class="btn btn-success pull-right">Un-deliver</button>
+        {% endif %}
+      </form>
+      <b>Order #{{ order.pk }} - {{ order.user }} {{ order.created|date:"m/d@P" }}</b>
+      <div>
+        <ul>
+          {% for item in items.all %}
+          <li><b>{{ item.quantity }}x</b> {{ item.product }}</li>
+          {% endfor %}
+          {% for info in order.extra_info.all %}
+          {% if forloop.first %}<br/>{% endif %}
+          <li>{{ info.text }}</li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+    {% endfor %}
   </div>
   {% endfor %}
 </div>
