course checkout page is now fully functional

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -22,6 +22,8 @@ section.banner { padding-bottom: 35px; }
 
 /* txrx overrides */
 
+.btn-no { background: transparent; border: 0; color: inherit; outline: 0; }
+
 header, #main {
   padding: 0 15px;
 }
