adding alternate display for checkout tests

--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -3,5 +3,5 @@
 {% block title %}Shop{% endblock %}
 
 {% block products %}
-<product-list model_slug="store.consumable"></product-list>
+<product-list></product-list>
 {% endblock %}
