--- a/main/static/less/store.less
+++ b/main/static/less/store.less
@@ -95,3 +95,11 @@ category-list {
     font-weight: bold;
   }
 }
+
+.Checkouts {
+  .alert { position: relative; }
+  form.bot-right {
+    position: absolute;
+    bottom: 10px; right: 10px; 
+  }
+}
