limit store options by model_slugs

--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -3,5 +3,5 @@
 {% block title %}Shop{% endblock %}
 
 {% block products %}
-<product-list></product-list>
+<product-list model_slugs="store.consumables,store.coursecheckouts"></product-list>
 {% endblock %}
